[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/paddles/Computer.png" type="Texture" id=1]
[ext_resource path="res://scenes/Paddle.gd" type="Script" id=2]
[ext_resource path="res://music/power/SFX_Powerup_04.wav" type="AudioStream" id=3]
[ext_resource path="res://music/power/SFX_Powerup_06.wav" type="AudioStream" id=4]
[ext_resource path="res://music/power/SFX_Powerup_05.wav" type="AudioStream" id=5]
[ext_resource path="res://music/power/SFX_Powerup_07.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "paddles",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 4.5 )

[node name="Paddle" type="KinematicBody2D" groups=["paddle"]]
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "paddles"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.5 )
shape = SubResource( 2 )

[node name="power1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "sfx"

[node name="power2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[node name="power3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[node name="power4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "sfx"
